--- a/.github/workflows/auto-author-assign.yml
+++ b/.github/workflows/auto-author-assign.yml
@@ -3,12 +3,12 @@
 #
 name: "Auto Assign"
 on:
-  issues:
-    types: [opened, reopened]
+  #issues:
+  #  types: [opened, reopened]
   pull_request_target:
     types: [opened, reopened]
 permissions:
-  issues: write
+  #issues: write
   pull-requests: write
 jobs:
   assign:
