--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -35,7 +35,7 @@ env:
   ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
   RHEL_ARM64_TESTS: "TRC-102 TRC-103 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
   NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS HTTP"
-  INSTTESTS: "VFS_WRITE FILE_MODIFICATION"
+  INSTTESTS: "VFS_WRITE FILE_MODIFICATION SECURITY_INODE_RENAME"
 jobs:
   #
   # CODE VERIFICATION (github runner)
