--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -38,17 +38,17 @@ RUN apk --no-cache add man-pages man-pages-posix bash-completion vim && \
 # install staticcheck
 
 RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install honnef.co/go/tools/cmd/staticcheck@latest && \
-    sudo cp $HOME/go/bin/staticcheck /usr/bin/
+    cp $HOME/go/bin/staticcheck /usr/bin/
 
 # install goimports-reviser
 
 RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
-    sudo cp $HOME/go/bin/goimports-reviser /usr/bin/
+    cp $HOME/go/bin/goimports-reviser /usr/bin/
 
 # install errcheck
 
 RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest && \
-    sudo cp $HOME/go/bin/errcheck /usr/bin/
+    cp $HOME/go/bin/errcheck /usr/bin/
 
 # allow TRACEE* and LIBBPFGO* environment variables through sudo
 
