--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -72,17 +72,17 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 # install staticcheck
 
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install honnef.co/go/tools/cmd/staticcheck@latest && \
-    sudo cp $HOME/go/bin/staticcheck /usr/bin/
+    cp $HOME/go/bin/staticcheck /usr/bin/
 
 # install goimports-reviser
 
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
-    sudo cp $HOME/go/bin/goimports-reviser /usr/bin/
+    cp $HOME/go/bin/goimports-reviser /usr/bin/
 
 # install errcheck
 
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest && \
-    sudo cp $HOME/go/bin/errcheck /usr/bin/
+    cp $HOME/go/bin/errcheck /usr/bin/
 
 USER tracee
 ENV HOME /home/tracee
