docs: update docs to reflect new binary
This updates the docs to reflect the new binary name.

It also:

- Fixes golang and rego signatures examples.
- Removes "$" from the commands so they can be copied and pasted.
  Command output is now split into a separate block so it doesn't
  interfere with copy/paste.
- Standardizes command code blocks to use "```console", leaving
  "```shell" for shell scripts only.
- Fixes some typos and formatting issues.

--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -65,13 +65,13 @@ help:
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"clean\""
 	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"bpf-core\""
-	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"tracee-ebpf\""
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"tracee\""
 	@echo ""
 	@echo "    > This will generate UBUNTU binaries in the working ./dist directory".
 	@echo ""
 	@echo "  2. You may provide STATIC variable for static binaries:"
 	@echo ""
-	@echo "    $$ STATIC=1 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
+	@echo "    $$ STATIC=1 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee\""
 	@echo ""
 	@echo "    > This will generate a STATIC binary in the working ./dist directory."
 	@echo "    > Despite being compiled by ALPINE, it will work in any distro."
