workflows: make release like the snapshot logic
- also: include static and non-static binaries in .tar.gz

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,6 @@
 #
 name: Release
 on:
-  workflow_dispatch: {}
   push:
     tags:
       - "v*"
@@ -14,44 +13,82 @@ jobs:
       [
         "github-self-hosted_ami-0f66f3ab4856ffc3f_${{ github.event.number }}-${{ github.run_id }}",
       ]
-    permissions:
-      contents: write
-      id-token: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: AWS Environment
+        run: |
+          dmidecode
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and Release
-        run:
-          make -f builder/Makefile.release PUSH_DOCKER_REPO=aquasec/tracee
+      - name: Build
+        run: |
+          make -f builder/Makefile.release
+        # tracee:latest and tracee:full for historical reasons
+        # use :x86_64 as tag for the latest image
+        # use :x86_64-v0.xx.0 for versioned image
+      - name: Publish to docker.io registry
+        run: |
+          TAG=$(git describe --tags --abbrev=0)
+          ARCH=$(uname -m)
+          docker image tag tracee:latest aquasec/tracee:latest
+          docker image tag tracee:latest aquasec/tracee:${ARCH}
+          docker image tag tracee:latest aquasec/tracee:${ARCH}-${TAG}
+          docker image push aquasec/tracee:latest
+          docker image push aquasec/tracee:${ARCH}
+          docker image push aquasec/tracee:${ARCH}-${TAG}
+          docker image tag tracee:full aquasec/tracee:full
+          docker image tag tracee:full aquasec/tracee:${ARCH}-full
+          docker image tag tracee:full aquasec/tracee:${ARCH}-${TAG}-full
+          docker image push aquasec/tracee:full
+          docker image push aquasec/tracee:${ARCH}-full
+          docker image push aquasec/tracee:${ARCH}-${TAG}-full
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release-arm64:
     name: Release ARM64
-    # only runs after x64 released (x64 is still the "default" arch, will create the release)
+    # only runs after x64 released (x64 is still the "default" arch)
     needs:
       - release
     runs-on:
       [
         "github-self-hosted_ami-0226a47b9804ee055_${{ github.event.number }}-${{ github.run_id }}",
       ]
-    permissions:
-      contents: write
-      id-token: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: AWS Environment
+        run: |
+          dmidecode
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and Release
+      - name: Build
         run: |
-          make -f builder/Makefile.release PUSH_DOCKER_REPO=aquasec/tracee
+          make -f builder/Makefile.release
+        # NO tracee:latest and tracee:full (historical reason: amd64 only)
+        # use :aarch64 as tag for the latest image
+        # use :aarch64-v0.xx.0 for versioned image
+      - name: Publish to docker.io registry
+        run: |
+          TAG=$(git describe --tags --abbrev=0)
+          ARCH=$(uname -m)
+          docker image tag tracee:latest aquasec/tracee:${ARCH}
+          docker image tag tracee:latest aquasec/tracee:${ARCH}-${TAG}
+          docker image push aquasec/tracee:${ARCH}
+          docker image push aquasec/tracee:${ARCH}-${TAG}
+          docker image tag tracee:full aquasec/tracee:${ARCH}-full
+          docker image tag tracee:full aquasec/tracee:${ARCH}-${TAG}-full
+          docker image push aquasec/tracee:${ARCH}-full
+          docker image push aquasec/tracee:${ARCH}-${TAG}-full
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
