--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -127,12 +127,11 @@ help:
 #
 
 OUTPUT_DIR = ./dist
-RELEASE_NOTES ?= $(OUTPUT_DIR)/release_notes.txt
+RELEASE_NOTES ?= ./release_notes.txt
 
 $(OUTPUT_DIR):
 #
 	$(CMD_MKDIR) -p $@
-	$(CMD_TOUCH) $(RELEASE_NOTES)
 
 #
 # Create a release snapshot
@@ -209,6 +208,7 @@ ifneq ("$(SNAPSHOT)", "1")
 # create release notes (x86_64 only, other arches will be added after release)
 #
 ifeq ($(ARCH),x86_64)
+	$(CMD_TOUCH) $(RELEASE_NOTES)
 	echo '## Docker Images (x86_64 only)  ' >> $(RELEASE_NOTES)
 	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):$(IMAGE_TAG)`' >> $(RELEASE_NOTES);
 	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):$(IMAGE_TAG)-full`' >> $(RELEASE_NOTES);
