--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -507,6 +507,7 @@ nav:
       - Outputs:
           - Output Formats: docs/outputs/output-formats.md
           - Output Options: docs/outputs/output-options.md
+          - Logging: docs/outputs/logging.md
       - Forensics:
           - Getting Started: docs/forensics/index.md
       - Integrations:
